# TermoBeka-device

./: .gitmodules  CMakeLists.txt  Makefile  README.md  ca.crt  partitions.csv  platformio.ini  sdkconfig.debug  sdkconfig.debug.old  sdkconfig.esp32dev  sdkconfig.esp32dev.old  sdkconfig.release
.devcontainer/: Dockerfile  devcontainer.json
doc/HW/ControlBoard/: Accessories.kicad_sch  Nokia_5110_LCD.kicad_sch  TermoPLC_ControlBoard.kicad_pcb  TermoPLC_ControlBoard.kicad_pro  TermoPLC_ControlBoard.kicad_sch  USB_UART.kicad_sch  sd_card.kicad_sch
doc/HW/RelayBoard/: TermoPLC_RelayBoard.kicad_pcb  TermoPLC_RelayBoard.kicad_pro  TermoPLC_RelayBoard.kicad_sch  relay_modules.kicad_sch  voltage_management.kicad_sch
doc/SW/: TermoBeka_architecture.drawio  main_sysmgr.drawio  profile_regulator.drawio  sd_ui.drawio  wifi_server.drawio
lib/esp32-pcd8544/docs/: conf.py  index.rst  make.bat
lib/global_config/: CMakeLists.txt  font5x7.h  global_config.c  global_config.cpp  global_config.h  logo.h
lib/logger/: CMakeLists.txt  logger.c  logger.h
lib/nvs_manager/: CMakeLists.txt  nvs_config.h  nvs_manager.cpp  nvs_manager.h
lib/peripherals/: CMakeLists.txt  Max31865.cpp  Max31865.h  button.cpp  button.h  buzzer.cpp  buzzer.h  expander_controller.cpp  expander_controller.h  gpio_expander.cpp  gpio_expander.h  lcd_controller.cpp  lcd_controller.h  led.cpp  led.h  new_lcd_controller.cpp  new_lcd_controller.h  numerics.cpp  relay.cpp  relay.h  relay_expander.cpp  relay_expander.h  relay_type.h  rtd.cpp  rtd.h  rtd_controller.cpp  rtd_controller.h
lib/peripherals/drivers/: buzzer_driver.c  buzzer_driver.h  font5x7.h  gpio_expander_driver.c  gpio_expander_driver.h  i2c_wrapper.c  i2c_wrapper.h  pca9539_driver.c  pca9539_driver.h  pca9539_intr_driver.c  pca9539_intr_driver.h  pcd8544.c  pcd8544.h
lib/profile_manager/: CMakeLists.txt  profile.cpp  profile.h  profile_manager.cpp  profile_manager.h  profile_manager_task.cpp  profile_manager_task.h  profile_timer.c  profile_timer.h  profile_type.cpp  profile_type.h
lib/regulator_manager/: CMakeLists.txt  external_temperature_sensor.cpp  external_temperature_sensor.h  internal_temperature.c  internal_temperature_sensor.h  regulator.cpp  regulator.h  regulator_manager.cpp  regulator_manager.h  regulator_manager_task.cpp  regulator_manager_task.h  regulator_timer.c  regulator_timer.h  regulator_type.h
lib/regulator_manager/drivers/onewire/: onewire.h  onewire_symbols.h  onewire_timings.h  ow_init.c  ow_read.c  ow_reset.c  ow_romsearch.c  ow_send.c
lib/sd_manager/: CMakeLists.txt  sd_card.cpp  sd_card.h  sd_manager.cpp  sd_manager.h  sd_manager_task.cpp  sd_manager_task.h
lib/sd_manager/drivers/: sd_card_driver.c  sd_card_driver.h
lib/server_manager/: CMakeLists.txt  ca_cert.h  mqtt_driver.c  mqtt_driver.h  server_manager.cpp  server_manager.h  server_manager_task.cpp  server_manager_task.h
lib/system_manager/: CMakeLists.txt  console_task.cpp  console_task.h  system_manager.cpp  system_manager.h  system_manager_task.h  system_manger_task.cpp  tb_event.cpp  tb_event.h
lib/system_manager/commands/: commands.cpp  commands.h  profile_commands.cpp  profile_commands.h  sd_commands.cpp  sd_commands.h  server_commads.cpp  server_commands.h  ui_commands.cpp  ui_commands.h  utility_commands.cpp  utility_commands.h  wifi_commands.cpp  wifi_commands.h
lib/ui_manager/: CMakeLists.txt  buzzer.h  ui_manager.cpp  ui_manager.h  ui_manager_task.cpp  ui_manager_task.h  ui_system_state.h
lib/ui_manager/components/: option_list.cpp  option_list.h  profile_bar.cpp  profile_bar.h  rect.cpp  rect.h  scrolling_text.cpp  scrolling_text.h  status_bar.cpp  status_bar.h  ui_components.h
lib/ui_manager/drivers/: buzzer_driver.c  buzzer_driver.h
lib/ui_manager/icons/: icons.h  logo.h  wifi_icon.h
lib/ui_manager/scenes/: menu_scene.cpp  menu_scene.h  profile_selected_scene.cpp  profile_selected_scene.h  scene.cpp  scene.h  select_profile_scene.cpp  select_profile_scene.h  settings_scene.cpp  settings_scene.h  start_profile_scene.cpp  start_profile_scene.h  startup_scene.cpp  startup_scene.h  waiting_message_scene.cpp  waiting_message_scene.h
lib/wifi_manager/: CMakeLists.txt  ntp_driver.c  ntp_driver.h  wifi_driver.c  wifi_driver.h  wifi_manager.cpp  wifi_manager.h  wifi_manager_task.cpp  wifi_manager_task.h
lib/wifi_stack/: CMakeLists.txt  ntp_stack.c  ntp_stack.h  wifi_stack.c  wifi_stack.h
make/: common.mk  platformio.mk
proto/: from_device_msg.proto  profile_status_update.proto  status_update.proto  to_device_msg.options  to_device_msg.proto
src/: CMakeLists.txt  config.h  main.c  main.cpp
