idf_component_register(
    SRCS
        "drivers/buzzer_driver.c"
        "buzzer.cpp"
        "drivers/i2c_wrapper.c"
        "drivers/pca9539_driver.c"
        "drivers/pca9539_intr_driver.c"
        "drivers/pcd8544.c"
        "expander_controller.cpp"
        "gpio_expander.cpp"
        "lcd_controller.cpp"
    PRIV_REQUIRES
        "driver/gpio"
        "driver/i2c"
        "driver/spi_master"
)