idf_component_register(
    SRCS
        "drivers/buzzer_driver.c"
        "drivers/i2c_wrapper.c"
        "drivers/pca9539_driver.c"
        "drivers/pca9539_intr_driver.c"
        "buzzer.cpp"
        "button.cpp"
        "expander_controller.cpp"
        "gpio_expander.cpp"
        "lcd_controller.cpp"
        "led.cpp"
    REQUIRES
        driver/gpio
        driver/i2c
        driver/spi_master
        system_manager
)
