idf_component_register(
    SRCS
        "tb_event.cpp"
        "commands/utility_commands.cpp"
        "commands/ui_commands.cpp"
        "commands/sd_commands.cpp"
        "commands/wifi_commands.cpp"
        "commands/profile_commands.cpp"
        "commands/commands.cpp"
        "console_task.cpp"
        "system_manager.cpp"
        "system_manager_task.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver/uart
        esp_console
        esp_flash
        linenoise
        logger
        nvs_manager
        profile_manager
)
