idf_component_register(
    SRCS
        "ui_manager.cpp"
        "ui_manager_task.cpp"
        "scenes/scene.cpp"
        "scenes/startup_scene.cpp"
        "scenes/menu_scene.cpp"
        "ui_manager/option_list.cpp"
        "ui_manager/rect.cpp"
    REQUIRES
        logger
        peripherals
        system_manager
)