idf_component_register(
    SRCS
        "ui_manager.cpp"
        "ui_manager_task.cpp"
        "scenes/scene.cpp"
        "scenes/startup_scene.cpp"
        "scenes/menu_scene.cpp"
        "scenes/select_profile_scene.cpp"
        "components/option_list.cpp"
        "components/rect.cpp"
        "components/status_bar.cpp"
        "components/scrolling_text.cpp"
    REQUIRES
        logger
        peripherals
        system_manager
)
